--- a/src/css/imports/title.less
+++ b/src/css/imports/title.less
@@ -1,6 +1,5 @@
 @import "vars";
 
-
 .jw-title {
     display: none;
     position: absolute;
@@ -48,7 +47,5 @@
 
   .jw-title-secondary {
     display: none;
-    margin-top: 5px;
   }
-
 }
